--- a/docs/sphinx/examples/demo_notebook.ipynb
+++ b/docs/sphinx/examples/demo_notebook.ipynb
@@ -67,37 +67,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting git+https://github.com/pquentin/eland.git@demo-notebook-colab\r\n",
-      "  Cloning https://github.com/pquentin/eland.git (to revision demo-notebook-colab) to /tmp/pip-req-build-llaufivk\r\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/pquentin/eland.git /tmp/pip-req-build-llaufivk\r\n",
-      "  Running command git checkout -b demo-notebook-colab --track origin/demo-notebook-colab\r\n",
-      "  Switched to a new branch 'demo-notebook-colab'\r\n",
-      "  branch 'demo-notebook-colab' set up to track 'origin/demo-notebook-colab'.\r\n",
-      "  Resolved https://github.com/pquentin/eland.git to commit a85c8debaf44833ea1e8eb0041cd654dc2029709\r\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25l-\b \bdone\r\n",
-      "\u001b[?25hRequirement already satisfied: elasticsearch<9,>=8.3 in /home/q/src/eland/.nox/docs/lib/python3.10/site-packages (from eland==8.9.0) (8.9.0)\r\n",
-      "Requirement already satisfied: pandas<2,>=1.5 in /home/q/src/eland/.nox/docs/lib64/python3.10/site-packages (from eland==8.9.0) (1.5.3)\r\n",
-      "Requirement already satisfied: matplotlib>=3.6 in /home/q/src/eland/.nox/docs/lib64/python3.10/site-packages (from eland==8.9.0) (3.8.0)\r\n",
-      "Requirement already satisfied: numpy<1.24,>=1.2.0 in /home/q/src/eland/.nox/docs/lib64/python3.10/site-packages (from eland==8.9.0) (1.23.5)\r\n",
-      "Requirement already satisfied: elastic-transport<9,>=8 in /home/q/src/eland/.nox/docs/lib/python3.10/site-packages (from elasticsearch<9,>=8.3->eland==8.9.0) (8.4.0)\r\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/q/src/eland/.nox/docs/lib64/python3.10/site-packages (from matplotlib>=3.6->eland==8.9.0) (1.1.1)\r\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/q/src/eland/.nox/docs/lib/python3.10/site-packages (from matplotlib>=3.6->eland==8.9.0) (0.11.0)\r\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/q/src/eland/.nox/docs/lib64/python3.10/site-packages (from matplotlib>=3.6->eland==8.9.0) (4.42.1)\r\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/q/src/eland/.nox/docs/lib64/python3.10/site-packages (from matplotlib>=3.6->eland==8.9.0) (1.4.5)\r\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/q/src/eland/.nox/docs/lib/python3.10/site-packages (from matplotlib>=3.6->eland==8.9.0) (23.1)\r\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/q/src/eland/.nox/docs/lib64/python3.10/site-packages (from matplotlib>=3.6->eland==8.9.0) (10.0.1)\r\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /home/q/src/eland/.nox/docs/lib/python3.10/site-packages (from matplotlib>=3.6->eland==8.9.0) (3.1.1)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/q/src/eland/.nox/docs/lib/python3.10/site-packages (from matplotlib>=3.6->eland==8.9.0) (2.8.2)\r\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/q/src/eland/.nox/docs/lib/python3.10/site-packages (from pandas<2,>=1.5->eland==8.9.0) (2023.3.post1)\r\n",
-      "Requirement already satisfied: urllib3<2,>=1.26.2 in /home/q/src/eland/.nox/docs/lib/python3.10/site-packages (from elastic-transport<9,>=8->elasticsearch<9,>=8.3->eland==8.9.0) (1.26.16)\r\n",
-      "Requirement already satisfied: certifi in /home/q/src/eland/.nox/docs/lib/python3.10/site-packages (from elastic-transport<9,>=8->elasticsearch<9,>=8.3->eland==8.9.0) (2023.7.22)\r\n",
-      "Requirement already satisfied: six>=1.5 in /home/q/src/eland/.nox/docs/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib>=3.6->eland==8.9.0) (1.16.0)\r\n"
+      "Collecting eland\n",
+      "  Downloading eland-8.9.0-py3-none-any.whl (156 kB)\n",
+      "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/156.0 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m \u001b[32m153.6/156.0 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m156.0/156.0 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (2.31.0)\n",
+      "Collecting elasticsearch<9,>=8.3 (from eland)\n",
+      "  Downloading elasticsearch-8.9.0-py3-none-any.whl (395 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m395.5/395.5 kB\u001b[0m \u001b[31m10.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: pandas<2,>=1.5 in /usr/local/lib/python3.10/dist-packages (from eland) (1.5.3)\n",
+      "Requirement already satisfied: matplotlib>=3.6 in /usr/local/lib/python3.10/dist-packages (from eland) (3.7.1)\n",
+      "Requirement already satisfied: numpy<1.24,>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from eland) (1.23.5)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests) (3.2.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests) (2.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests) (2023.7.22)\n",
+      "Collecting elastic-transport<9,>=8 (from elasticsearch<9,>=8.3->eland)\n",
+      "  Downloading elastic_transport-8.4.0-py3-none-any.whl (59 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.5/59.5 kB\u001b[0m \u001b[31m9.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.6->eland) (1.1.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.6->eland) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.6->eland) (4.42.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.6->eland) (1.4.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.6->eland) (23.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.6->eland) (9.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.6->eland) (3.1.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.6->eland) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas<2,>=1.5->eland) (2023.3.post1)\n",
+      "Collecting urllib3<3,>=1.21.1 (from requests)\n",
+      "  Downloading urllib3-1.26.16-py2.py3-none-any.whl (143 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m143.1/143.1 kB\u001b[0m \u001b[31m9.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib>=3.6->eland) (1.16.0)\n",
+      "Installing collected packages: urllib3, elastic-transport, elasticsearch, eland\n",
+      "  Attempting uninstall: urllib3\n",
+      "    Found existing installation: urllib3 2.0.4\n",
+      "    Uninstalling urllib3-2.0.4:\n",
+      "      Successfully uninstalled urllib3-2.0.4\n",
+      "Successfully installed eland-8.9.0 elastic-transport-8.4.0 elasticsearch-8.9.0 urllib3-1.26.16\n"
      ]
     }
    ],
    "source": [
-    "# TODO switch to !pip install eland before merging\n",
-    "!pip install git+https://github.com/pquentin/eland.git@demo-notebook-colab\n",
+    "!pip install eland requests\n",
     "\n",
     "import os\n",
     "\n",
@@ -112,24 +122,6 @@
     "# Import standard test settings for consistent results\n",
     "from eland.conftest import *"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-15T20:24:28.813370Z",
-     "iopub.status.busy": "2021-12-15T20:24:28.802670Z",
-     "iopub.status.idle": "2021-12-15T20:24:30.192643Z",
-     "shell.execute_reply": "2021-12-15T20:24:30.192931Z"
-    },
-    "id": "64Wm8FvSNRFD",
-    "pycharm": {
-     "is_executing": false
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -163,7 +155,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to cluster named 'docker-cluster' (version: 8.10.1)\n"
+      "Elastic Cloud ID: ··········\n",
+      "Elastic username: ··········\n",
+      "Elastic password: ··········\n",
+      "Connected to cluster named '9fcead8be8d2469fa096128e20496cee' (version: 8.9.1)\n"
      ]
     }
    ],
