--- a/docs/guide/installation.asciidoc
+++ b/docs/guide/installation.asciidoc
@@ -1,14 +1,14 @@
 [[installation]]
 == Installation
 
-Eland can be installed with https://pip.pypa.io[pip] from https://pypi.org/project/eland[PyPI]:
+Eland can be installed with https://pip.pypa.io[pip] from https://pypi.org/project/eland[PyPI]. We recommend https://packaging.python.org/en/latest/guides/installing-using-pip-and-virtual-environments/[using a virtual environment] when installing with pip:
 
 [source,sh]
 -----------------------------
 $ python -m pip install eland
 -----------------------------
 
-and can also be installed with https://docs.conda.io[Conda] from https://anaconda.org/conda-forge/eland[Conda Forge]:
+Alternatively, Eland can be installed with https://docs.conda.io[Conda] from https://anaconda.org/conda-forge/eland[Conda Forge]:
 
 [source,sh]
 ------------------------------------
