--- a/docs/guide/machine-learning.asciidoc
+++ b/docs/guide/machine-learning.asciidoc
@@ -38,9 +38,8 @@ model in {es}.
 [[ml-nlp-pytorch]]
 === Natural language processing (NLP) with PyTorch
 
-
-IMPORTANT: You need to use PyTorch `1.13` or earlier to import an NLP model. 
-Run `pip install torch==1.13` to install the aproppriate version of PyTorch.
+IMPORTANT: You need to appropriate version of PyTorch to import an NLP model. Run
+`python -m pip install 'eland[pytorch]'` to install the latest version.
 
 For NLP tasks, Eland enables you to import PyTorch models into {es}. Use the 
 `eland_import_hub_model` script to download and install supported 
