--- a/docs/guide/machine-learning.asciidoc
+++ b/docs/guide/machine-learning.asciidoc
@@ -60,6 +60,12 @@ $ eland_import_hub_model <authentication> \ <1>
 <4> Specify the type of NLP task. Supported values are `fill_mask`, `ner`,
 `question_answering`, `text_classification`, `text_embedding`, and `zero_shot_classification`.
 
+For more information about the available options, run `eland_import_hub_model` with the `--help` option.
+
+[source,bash]
+------------------------
+$ eland_import_hub_model --help
+------------------------
 
 [discrete]
 [[ml-nlp-pytorch-docker]]
@@ -189,5 +195,30 @@ eland_import_hub_model --es-api-key <api-key> --url https://<hostname>:<port> ..
 [source,bash]
 --------------------------------------------------
 eland_import_hub_model --hub-access-token <access-token> ...
+--------------------------------------------------
+--
+
+[discrete]
+[[ml-nlp-pytorch-tls]]
+==== TLS/SSL
+
+The following TLS/SSL options for Elasticsearch are available when using the import script:
+
+
+* Specify alternate CA bundle to verify the cluster certificate:
++
+--
+[source,bash]
+--------------------------------------------------
+eland_import_hub_model --ca-certs CA_CERTS ...
+--------------------------------------------------
+--
+
+* Disable TLS/SSL verification altogether (strongly discouraged):
++
+--
+[source,bash]
+--------------------------------------------------
+eland_import_hub_model --insecure ...
 --------------------------------------------------
 --
