Sort list fields to make tests deterministic

--- a/tests/notebook/test_demo_notebook.ipynb
+++ b/tests/notebook/test_demo_notebook.ipynb
@@ -690,7 +690,7 @@
     {
      "data": {
       "text/plain": [
-       "<eland.index.Index at 0x79b8a3fa1c90>"
+       "<eland.index.Index at 0x796bfb49ce80>"
       ]
      },
      "execution_count": 17,
@@ -2710,7 +2710,7 @@
       " 27  timestamp           13059 non-null  datetime64[ns]\n",
       "dtypes: bool(2), datetime64[ns](1), float64(5), int64(2), object(18)\n",
       "memory usage: 64.000 bytes\n",
-      "Elasticsearch storage usage: 5.449 MB\n"
+      "Elasticsearch storage usage: 5.455 MB\n"
      ]
     }
    ],
@@ -3154,7 +3154,7 @@
        "    <tr>\n",
        "      <th>13056</th>\n",
        "      <td>Logstash Airways</td>\n",
-       "      <td>[Mexico City, Belogorsk]</td>\n",
+       "      <td>[Belogorsk, Mexico City]</td>\n",
        "      <td>...</td>\n",
        "      <td>6</td>\n",
        "      <td>2018-02-11 04:09:27</td>\n",
@@ -3162,7 +3162,7 @@
        "    <tr>\n",
        "      <th>13057</th>\n",
        "      <td>JetBeats</td>\n",
-       "      <td>[Osaka, Buenos Aires]</td>\n",
+       "      <td>[Buenos Aires, Osaka]</td>\n",
        "      <td>...</td>\n",
        "      <td>6</td>\n",
        "      <td>2018-02-11 08:28:21</td>\n",
@@ -3190,8 +3190,8 @@
        "...                 ...                          ...  ...       ...                 ...\n",
        "13054  Logstash Airways                [Pisa, Xi'an]  ...         6 2018-02-11 20:42:25\n",
        "13055  Logstash Airways           [Winnipeg, Zurich]  ...         6 2018-02-11 01:41:57\n",
-       "13056  Logstash Airways     [Mexico City, Belogorsk]  ...         6 2018-02-11 04:09:27\n",
-       "13057          JetBeats        [Osaka, Buenos Aires]  ...         6 2018-02-11 08:28:21\n",
+       "13056  Logstash Airways     [Belogorsk, Mexico City]  ...         6 2018-02-11 04:09:27\n",
+       "13057          JetBeats        [Buenos Aires, Osaka]  ...         6 2018-02-11 08:28:21\n",
        "13058          JetBeats       [Adelaide, Washington]  ...         6 2018-02-11 14:54:34\n",
        "\n",
        "[13059 rows x 21 columns]"
@@ -3313,7 +3313,7 @@
        "    <tr>\n",
        "      <th>13056</th>\n",
        "      <td>Logstash Airways</td>\n",
-       "      <td>[Mexico City, Belogorsk]</td>\n",
+       "      <td>[Belogorsk, Mexico City]</td>\n",
        "      <td>...</td>\n",
        "      <td>6</td>\n",
        "      <td>2018-02-11 04:09:27</td>\n",
@@ -3321,7 +3321,7 @@
        "    <tr>\n",
        "      <th>13057</th>\n",
        "      <td>JetBeats</td>\n",
-       "      <td>[Osaka, Buenos Aires]</td>\n",
+       "      <td>[Buenos Aires, Osaka]</td>\n",
        "      <td>...</td>\n",
        "      <td>6</td>\n",
        "      <td>2018-02-11 08:28:21</td>\n",
@@ -3349,8 +3349,8 @@
        "...                 ...                          ...  ...       ...                 ...\n",
        "13054  Logstash Airways                [Pisa, Xi'an]  ...         6 2018-02-11 20:42:25\n",
        "13055  Logstash Airways           [Winnipeg, Zurich]  ...         6 2018-02-11 01:41:57\n",
-       "13056  Logstash Airways     [Mexico City, Belogorsk]  ...         6 2018-02-11 04:09:27\n",
-       "13057          JetBeats        [Osaka, Buenos Aires]  ...         6 2018-02-11 08:28:21\n",
+       "13056  Logstash Airways     [Belogorsk, Mexico City]  ...         6 2018-02-11 04:09:27\n",
+       "13057          JetBeats        [Buenos Aires, Osaka]  ...         6 2018-02-11 08:28:21\n",
        "13058          JetBeats       [Adelaide, Washington]  ...         6 2018-02-11 14:54:34\n",
        "\n",
        "[13059 rows x 21 columns]"
