[DOCS] Completes the list of available NLP task types.

--- a/docs/guide/machine-learning.asciidoc
+++ b/docs/guide/machine-learning.asciidoc
@@ -58,7 +58,8 @@ $ eland_import_hub_model <authentication> \ <1>
 <2> The cluster URL. Alternatively, use `--cloud-id`.
 <3> Specify the identifier for the model in the Hugging Face model hub.
 <4> Specify the type of NLP task. Supported values are `fill_mask`, `ner`,
-`question_answering`, `text_classification`, `text_embedding`, and `zero_shot_classification`.
+`question_answering`, `text_classification`, `text_embedding`, `text_expansion`,
+`text_similarity` and `zero_shot_classification`.
 
 For more information about the available options, run `eland_import_hub_model` with the `--help` option.
 
