--- a/docs/guide/machine-learning.asciidoc
+++ b/docs/guide/machine-learning.asciidoc
@@ -140,10 +140,10 @@ the model directory, so the container can read the files:
 
 [source,bash]
 ----
-docker run --mount type=bind,source=/PATH/TO/MODELS,destination=/models,readonly -it --rm docker.elastic.co/eland/eland \
+docker run --mount type=bind,source=/PATH/TO/MODEL,destination=/model,readonly -it --rm docker.elastic.co/eland/eland \
     eland_import_hub_model \
       --url 'XXXX' \
-      --hub-model-id /models/bert-base-NER \
+      --hub-model-id /model \
       --task-type ner \
       --es-username elastic --es-password XXX \
       --es-model-id bert-base-ner
