Don't validate output where it differs between Pandas versions in the environment

--- a/tests/notebook/test_demo_notebook.ipynb
+++ b/tests/notebook/test_demo_notebook.ipynb
@@ -1792,7 +1792,7 @@
     }
    ],
    "source": [
-    "ed_flights.query('Carrier == \"Kibana Airlines\" & AvgTicketPrice > 900.0 & Cancelled == True')"
+    "# NBVAL_IGNORE_OUTPUT\n",
    ]
   },
   {
@@ -2471,6 +2471,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "pd_flights.describe()"
    ]
   },
