Add line comment about NBVAL_IGNORE_OUTPUT

--- a/tests/notebook/test_demo_notebook.ipynb
+++ b/tests/notebook/test_demo_notebook.ipynb
@@ -2472,6 +2472,7 @@
    ],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
+    "# Once support for pandas <2 is dropped, this and the line above can be removed\n",
     "pd_flights.describe()"
    ]
   },
