Restore missing line and add stderr cell

--- a/tests/notebook/test_demo_notebook.ipynb
+++ b/tests/notebook/test_demo_notebook.ipynb
@@ -1648,6 +1648,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+       "/code/eland/.nox/test-3-12-pandas_version-2-2-3/lib/python3.12/site-packages/eland/series.py:464: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+       "  return self._query_compiler.dtypes[0]\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -1792,7 +1800,8 @@
     }
    ],
    "source": [
-    "# NBVAL_IGNORE_OUTPUT\n"
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "ed_flights.query('Carrier == \"Kibana Airlines\" & AvgTicketPrice > 900.0 & Cancelled == True')"
    ]
   },
   {
