Add reason for ignore statement

--- a/tests/notebook/test_demo_notebook.ipynb
+++ b/tests/notebook/test_demo_notebook.ipynb
@@ -1801,6 +1801,8 @@
    ],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
+    "# The ignore statement above is because of output difference between Pandas 1 and 2\n",
+    "# and can be removed once Pandas 1 support is dropped\n",
     "ed_flights.query('Carrier == \"Kibana Airlines\" & AvgTicketPrice > 900.0 & Cancelled == True')"
    ]
   },
