--- a/tests/notebook/test_demo_notebook.ipynb
+++ b/tests/notebook/test_demo_notebook.ipynb
@@ -752,7 +752,8 @@
        "       [1102.8144645388556, False, 'JetBeats', ..., 'Hail', 6,\n",
        "        Timestamp('2018-02-11 08:28:21')],\n",
        "       [858.1443369038839, False, 'JetBeats', ..., 'Rain', 6,\n",
-       "        Timestamp('2018-02-11 14:54:34')]], dtype=object)"
+       "        Timestamp('2018-02-11 14:54:34')]],",
+       "      shape=(13059, 28), dtype=object)"
       ]
      },
      "execution_count": 19,
@@ -761,6 +762,9 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "# The ignore statement above is because of output difference between Pandas 1 and 2\n",
+    "# and can be removed once Pandas 1 support is dropped\n",
     "pd_flights.values"
    ]
   },
